written first tests with 100% coverage